--- a/style.css
+++ b/style.css
@@ -4,9 +4,10 @@
   --sub-text-color: #5d6775;
   --hover-text: #cedaea;
   --hover-bg: #304159;
+  --project-bg: #ebf0f6;
 }
 
-/*BOOTSTRAP HEADER*/
+/*BOOTSTRAP NAVBAR HEADER*/
 .navbar {
   padding: 50px;
 }
@@ -41,6 +42,174 @@
 
 .sr-only {
   text-decoration: underline;
+}
+
+/*PORTFOLIO PAGE*/
+.image {
+  margin: 0 auto;
+  margin-bottom: 20px;
+  position: relative;
+  max-width: 500px;
+
+  border-color: var(--sub-text-color);
+}
+
+.portfolio-img {
+  display: block;
+  max-width: 450px;
+  width: 100%;
+}
+
+.image-overlay,
+.image-overlay-dict {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background: rgba(48, 65, 89, 0.85);
+  color: white;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  opacity: 0;
+  transition: opacity 0.25s;
+  font-family: var(--sub-font);
+  font-size: 30px;
+}
+
+.image-overlay:hover,
+.image-overlay-dict:hover {
+  opacity: 1;
+}
+/*END PORTFOLIO PAGE*/
+
+/*PORTFOLIO IMAGES*/
+
+.projects-category {
+  margin-top: 50px;
+}
+
+.carrots-img,
+.dictionary-img {
+  display: block;
+  text-align: center;
+  padding: 40px 40px;
+  border-radius: 9px;
+}
+
+.carrots-img {
+  max-width: 450px;
+}
+
+.dictionary-img {
+  max-width: 499.5px;
+}
+
+/*UX LANDING PAGE*/
+.ux-img {
+  display: block;
+  max-width: 600px;
+  width: 100%;
+}
+
+/*ABOUT ME*/
+.about-me-all {
+  margin-top: 30px;
+}
+
+.about-title {
+  font-family: var(--sub-font);
+  font-weight: bold;
+  font-size: 50px;
+  margin-left: 18px;
+}
+
+.bio-pic {
+  display: inline-block;
+  max-width: 650px;
+  margin-right: 100px !important;
+  box-shadow: 0px 5px 10px 0px rgba(0, 0, 0, 0.5);
+}
+
+.about-paragraph {
+  font-family: var(--sub-font);
+  font-size: 20px;
+  color: var(--sub-text-color);
+  margin-left: 18px;
+}
+
+.about-paragraph-two {
+  font-family: var(--sub-font);
+  margin-bottom: 80px;
+  margin-left: 18px;
+  border-left: 1px solid var(--hover-text);
+}
+
+.all-buttons {
+  margin-left: 20px;
+}
+
+.resume-button {
+  font-family: var(--header-font);
+  color: black;
+  text-decoration: none;
+  padding: 10px 40px;
+  border: 1px solid black;
+  margin-top: 90px;
+}
+
+.resume-button:hover {
+  color: #ffffff;
+  background-color: var(--hover-bg);
+  border-color: var(--hover-bg);
+  transition: 600ms;
+}
+
+.email-section {
+  margin-top: 40px;
+}
+
+.email-button,
+.linkedin-button {
+  text-decoration: none;
+}
+
+.website-link {
+  font-family: var(--sub-font);
+  font-size: 18px;
+  color: var(--sub-text-color);
+  text-decoration: none;
+  margin-left: 8px;
+}
+
+.website-link:hover {
+  color: var(--hover-bg);
+  transition: 600ms;
+}
+
+.linkedin-section {
+  margin-top: 10px;
+}
+
+/*END ABOUT SECTION*/
+
+@media (max-width: 767px) {
+  .bio-pic {
+    display: block !important;
+    margin: 0 auto !important;
+    text-align: center !important;
+  }
+
+  .about-title {
+    text-align: center !important;
+    margin-top: 30px !important;
+  }
 }
 
 /*MEDIA QUERIES*/
