--- a/style.css
+++ b/style.css
@@ -3,7 +3,7 @@
   --sub-font: "Sulphur Point", sans-serif;
   --sub-text-color: #5d6775;
   --hover-text: #cedaea;
-  --hover-bg: #304159;
+  --hover-bg: #5e656d;
   --project-bg: #ebf0f6;
 }
 
@@ -36,7 +36,7 @@
 
 .navbar-nav .nav-link:hover {
   color: white !important;
-  background-color: var(--hover-bg) !important;
+  background-color: rgba(94, 101, 109, 0.85) !important;
   transition: 600ms !important;
 }
 
@@ -67,7 +67,7 @@
   left: 0;
   width: 100%;
   height: 100%;
-  background: rgba(48, 65, 89, 0.85);
+  background: rgba(94, 101, 109, 0.85);
   color: white;
   display: flex;
   flex-direction: column;
