--- a/style-ux.css
+++ b/style-ux.css
@@ -78,11 +78,12 @@ p {
 
 .title-img {
   display: block;
-  max-width: 640px !important;
+  margin: 0 auto;
+  max-width: 600px !important;
 }
 
 .title-text {
-  margin-top: 80px;
+  margin-top: 200px;
   margin-right: 180px;
 }
 
@@ -257,9 +258,9 @@ p {
 
 .footer-link a:hover {
   color: white !important;
-  background-color: rgba(94, 101, 109, 0.85) !important;
+  background-color: rgba(94, 101, 109, 0.6) !important;
   transition: 600ms !important;
-  padding: 10px 20px;
+  padding: 10px 16px;
 }
 
 .footer-link .active {
