--- a/style.css
+++ b/style.css
@@ -5,6 +5,7 @@
   --hover-text: #cedaea;
   --hover-bg: #5e656d;
   --project-bg: #ebf0f6;
+  --darker-text-color: #2f3a47;
 }
 
 /*BOOTSTRAP NAVBAR HEADER*/
