--- a/style-ux.css
+++ b/style-ux.css
@@ -219,8 +219,31 @@ p {
 }
 
 /*HI-FI PROTOTYPE*/
-.hifi-protorype {
+.hifi-prototype {
   margin-top: 60px;
+}
+
+/*RESPONSIVE DESIGN*/
+.responsive-design {
+  margin-top: 80px;
+}
+
+.carrots-slide-mobile {
+  max-width: 280px;
+}
+
+.slide-shadow {
+  box-shadow: 0 1px 1px hsl(0deg 0% 0% / 0.075),
+    0 2px 2px hsl(0deg 0% 0% / 0.075), 0 4px 4px hsl(0deg 0% 0% / 0.075),
+    0 8px 8px hsl(0deg 0% 0% / 0.075), 0 16px 16px hsl(0deg 0% 0% / 0.075);
+}
+
+.carrots-slide-tablet {
+  max-width: 410px;
+}
+
+.carrots-slide-laptop {
+  max-width: 540px;
 }
 
 /*GOING FORWARD*/
