--- a/style-frontend.css
+++ b/style-frontend.css
@@ -37,7 +37,7 @@
 
 .navbar-nav .nav-link:hover {
   color: white !important;
-  background-color: rgba(94, 101, 109, 0.85) !important;
+  background-color: rgba(94, 101, 109, 0.9) !important;
   transition: 600ms !important;
 }
 
@@ -97,10 +97,89 @@
 .image-overlay-dict:hover {
   opacity: 1;
 }
+
+.title-line {
+  margin-bottom: 10px;
+  text-decoration: underline;
+}
 /*END PORTFOLIO PAGE*/
 
 /*PORTFOLIO IMAGES*/
 
 .projects-category {
   margin-top: 50px;
+}
+
+/*FOOTER CODE*/
+.footer-code {
+  font-family: var(--sub-font);
+  color: var(--sub-text-color);
+  margin-top: 90px;
+  margin-bottom: 70px;
+}
+
+.footer-code-link:hover {
+  color: var(--sub-text-color);
+  transition: 600ms;
+}
+
+/*MEDIA QUERIES*/
+/*MEDIA QUERIES*/
+@media (max-width: 991px) {
+  .navbar {
+    padding: 30px;
+  }
+  .navbar-brand {
+    margin-left: 10px;
+    font-size: 35px;
+  }
+
+  .navbar-toggler {
+    margin-right: 10px;
+  }
+
+  .navbar-nav {
+    margin-left: auto;
+  }
+
+  .navbar-collapse {
+    padding: 80px;
+  }
+
+  .navbar-toggler-icon {
+    max-width: 32px;
+  }
+
+  .hover-list-title {
+    font-size: 20px;
+    margin-top: 50px;
+  }
+
+  .hover-list {
+    font-size: 12px;
+    text-align: center;
+  }
+}
+@media (max-width: 414px) {
+  .navbar {
+    padding: 20px 0 20px 6px;
+  }
+  .navbar-brand {
+    font-size: 26px;
+    margin-left: 0;
+  }
+
+  .navbar-toggler-icon {
+    max-width: 30px;
+  }
+
+  .hover-list-title {
+    font-size: 28px;
+    margin-top: 40px;
+  }
+
+  .hover-list {
+    font-size: 20px;
+    text-align: center;
+  }
 }
