--- a/style-ux.css
+++ b/style-ux.css
@@ -57,7 +57,7 @@
 }
 
 .title-info {
-  text-align: right;
+  text-align: center;
 }
 
 .title-text h3,
@@ -67,34 +67,29 @@ p {
 
 .title-text h1 {
   font-family: var(--header-font);
-  font-size: 4em;
+  font-size: 50px;
 }
 
-.title-text h3 {
-  text-decoration: 1.5px;
-  margin-bottom: 30px;
+.case-study {
+  margin-bottom: 20px;
+  font-size: 30px;
 }
 
-.title-text p {
+.case-desc {
   font-style: italic;
-  font-size: 1.2em;
+  font-size: 20px;
 }
 
 .title-img {
   display: block;
   margin: 0 auto;
-  max-width: 600px !important;
+  margin-top: 50px;
 }
 
 .carrots-title-img {
   display: block;
   margin: 0 auto;
   max-width: 900px;
-}
-
-.title-text {
-  margin-top: 200px;
-  margin-right: 180px;
 }
 
 /*PROJECT OVERVIEW*/
@@ -184,8 +179,6 @@ p {
 
 .findings {
   padding-top: 20px;
-  padding-left: 120px !important;
-  padding-right: 120px;
 }
 
 .findings-line {
@@ -270,7 +263,7 @@ p {
 }
 
 .takeaway-paragraph {
-  padding: 20px 50px;
+  padding: 20px 20px;
 }
 
 /*NEXT STEPS*/
@@ -318,11 +311,177 @@ p {
   margin-bottom: 70px;
 }
 
-.footer-code-link {
-  color: var(--darker-text-color);
-}
-
 .footer-code-link:hover {
   color: var(--sub-text-color);
   transition: 600ms;
+}
+
+/*MEDIA QUERIES*/
+
+@media (max-width: 820px) {
+  .about-section {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+  }
+
+  .about-paragraph,
+  .about-paragraph-two {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    border-left: none;
+    text-align: center;
+  }
+
+  a .resume-button {
+    display: inline-block;
+    margin: 0 auto;
+    text-align: center;
+  }
+}
+
+@media (max-width: 991px) {
+  .navbar {
+    padding: 30px;
+  }
+  .navbar-brand {
+    margin-left: 20px;
+    font-size: 35px;
+  }
+
+  .navbar-toggler {
+    margin-right: 10px;
+  }
+
+  .navbar-nav {
+    margin-left: auto;
+  }
+
+  .navbar-collapse {
+    padding: 80px;
+  }
+
+  .navbar-toggler-icon {
+    max-width: 32px;
+  }
+
+  .image-title {
+    font-size: 20px;
+  }
+
+  .case-title {
+    font-size: 50px;
+  }
+
+  .container {
+    align-items: center;
+  }
+}
+
+@media (max-width: 767px) {
+  .bio-pic {
+    display: block !important;
+    margin: 0 auto !important;
+    text-align: center !important;
+  }
+
+  .about-title {
+    text-align: center !important;
+    margin-top: 30px !important;
+  }
+
+  .title-text {
+    margin-top: 50px;
+    margin-bottom: 10px;
+    text-align: left !important;
+  }
+
+  .title-img {
+    margin-top: 20px;
+  }
+}
+
+@media (max-width: 414px) {
+  .navbar {
+    padding: 20px 0 20px 6px;
+  }
+  .navbar-brand {
+    font-size: 26px;
+    margin-left: 22px;
+  }
+
+  .navbar-toggler-icon {
+    max-width: 30px;
+  }
+
+  .title-text {
+    text-align: left !important;
+  }
+  .case-title {
+    font-size: 20px;
+  }
+  .case-study,
+  .case-desc {
+    font-size: 14px;
+  }
+
+  .about-title {
+    font-size: 28px;
+  }
+
+  .about-section,
+  .about-paragraph {
+    font-size: 15px;
+  }
+
+  .footer-code {
+    margin-left: 18px;
+    margin-right: 18px;
+    margin-top: 10px;
+    font-size: 12px;
+  }
+
+  .project-overview-section,
+  .understand-user-section,
+  .persona-section,
+  .user-journey-map-section,
+  .paper-wireframe-section,
+  .digital-wireframe-section,
+  .usability-study-findings,
+  .refining-the-desgin,
+  .mockups,
+  .accessibility-section,
+  .refined-designs-section,
+  .hifi-prototype {
+    margin-top: 40px;
+    padding-left: 18px;
+    padding-right: 18px;
+    padding-top: 22px;
+    padding-bottom: 22px;
+    margin-bottom: 40px;
+  }
+
+  .round-findings {
+    padding-left: 1px;
+    padding-right: 1px;
+    text-align: left;
+  }
+
+  .takeaway-paragraph {
+    padding-left: 2px;
+    padding-right: 2px;
+    padding-top: 1px;
+    padding-bottom: 1px;
+  }
+
+  .takeaways {
+    margin-top: 40px;
+    margin-bottom: 40px;
+  }
+
+  .next-steps {
+    margin-top: 40px;
+    margin-bottom: 40px;
+  }
 }
