--- a/style.css
+++ b/style.css
@@ -68,7 +68,7 @@
   left: 0;
   width: 100%;
   height: 100%;
-  background: rgba(94, 101, 109, 0.85);
+  background: rgba(94, 101, 109, 0.9);
   color: white;
   display: flex;
   flex-direction: column;
@@ -81,7 +81,7 @@
   opacity: 0;
   transition: opacity 0.25s;
   font-family: var(--sub-font);
-  font-size: 30px;
+  font-size: 26px;
 }
 
 .image-overlay:hover,
@@ -132,12 +132,14 @@
 }
 
 .bio-pic {
-  display: inline-block;
-  max-width: 650px;
-  margin-right: 100px !important;
+  display: block;
+  margin: 0 auto;
   box-shadow: 0px 5px 10px 0px rgba(0, 0, 0, 0.5);
 }
 
+.about-section {
+  display: block;
+}
 .about-paragraph {
   font-family: var(--sub-font);
   font-size: 20px;
@@ -200,26 +202,44 @@
 
 /*END ABOUT SECTION*/
 
-@media (max-width: 767px) {
-  .bio-pic {
-    display: block !important;
-    margin: 0 auto !important;
-    text-align: center !important;
-  }
+/*FOOTER CODE*/
+.footer-code {
+  font-family: var(--sub-font);
+  color: var(--sub-text-color);
+  margin-top: 90px;
+  margin-bottom: 70px;
+}
 
-  .about-title {
-    text-align: center !important;
-    margin-top: 30px !important;
-  }
+.footer-code-link:hover {
+  color: var(--sub-text-color);
+  transition: 600ms;
 }
 
 /*MEDIA QUERIES*/
+
+@media (max-width: 820px) {
+  .about-section {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+  }
+
+  .about-paragraph,
+  .about-paragraph-two {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    border-left: none;
+    text-align: center;
+  }
+}
+
 @media (max-width: 991px) {
   .navbar {
     padding: 30px;
   }
   .navbar-brand {
-    margin-left: 10px;
+    margin-left: 20px;
     font-size: 35px;
   }
 
@@ -238,17 +258,56 @@
   .navbar-toggler-icon {
     max-width: 32px;
   }
+
+  .image-title {
+    font-size: 20px;
+  }
 }
+
+@media (max-width: 767px) {
+  .bio-pic {
+    display: block !important;
+    margin: 0 auto !important;
+    text-align: center !important;
+  }
+
+  .about-title {
+    text-align: center !important;
+    margin-top: 30px !important;
+  }
+}
+
 @media (max-width: 414px) {
   .navbar {
     padding: 20px 0 20px 6px;
   }
   .navbar-brand {
     font-size: 26px;
-    margin-left: 0;
+    margin-left: 22px;
   }
 
   .navbar-toggler-icon {
     max-width: 30px;
+  }
+
+  .about-title {
+    font-size: 28px;
+  }
+
+  .about-section,
+  .about-paragraph {
+    font-size: 15px;
+  }
+
+  .footer-code {
+    margin-left: 18px;
+    margin-right: 18px;
+    margin-top: 10px;
+    font-size: 12px;
+  }
+
+  .all-buttons {
+    display: block;
+    text-align: left;
   }
 }
