--- a/style.css
+++ b/style.css
@@ -1,11 +1,14 @@
 :root {
-  --header-font: "Julius Sans One", sans-serif;
-  --sub-font: "Sulphur Point", sans-serif;
+  --header-font: "Noto Serif", serif;
+  --sub-font: "M PLUS 1p", sans-serif;
   --sub-text-color: #5d6775;
   --hover-text: #cedaea;
   --hover-bg: #5e656d;
   --project-bg: #ebf0f6;
   --darker-text-color: #2f3a47;
+  --box-shadow: 0 1px 1px hsl(0deg 0% 0% / 0.075),
+    0 2px 2px hsl(0deg 0% 0% / 0.075), 0 4px 4px hsl(0deg 0% 0% / 0.075),
+    0 8px 8px hsl(0deg 0% 0% / 0.075), 0 16px 16px hsl(0deg 0% 0% / 0.075);
 }
 
 /*BOOTSTRAP NAVBAR HEADER*/
@@ -17,6 +20,18 @@
   font-size: 50px;
   margin-left: 50px;
   color: var(--hover-bg) !important;
+}
+
+.logo-img {
+  width: 100px;
+  margin-bottom: 5px;
+}
+
+.logo-text {
+  font-size: 12px;
+  font-family: var(--sub-font);
+  color: var(--sub-text-color);
+  margin-left: 50px;
 }
 
 .navbar-nav {
@@ -51,14 +66,13 @@
   margin-bottom: 20px;
   position: relative;
   max-width: 500px;
-
   border-color: var(--sub-text-color);
 }
 
 .portfolio-img {
   display: block;
-  max-width: 450px;
   width: 100%;
+  box-shadow: var(--box-shadow);
 }
 
 .image-overlay,
@@ -88,6 +102,11 @@
 .image-overlay-dict:hover {
   opacity: 1;
 }
+
+.image-title,
+.image-title-dict {
+  font-family: var(--header-font);
+}
 /*END PORTFOLIO PAGE*/
 
 /*PORTFOLIO IMAGES*/
@@ -96,27 +115,12 @@
   margin-top: 50px;
 }
 
-.carrots-img,
-.dictionary-img {
-  display: block;
-  text-align: center;
-  padding: 40px 40px;
-  border-radius: 9px;
-}
-
-.carrots-img {
-  max-width: 450px;
-}
-
-.dictionary-img {
-  max-width: 499.5px;
-}
-
 /*UX LANDING PAGE*/
 .ux-img {
   display: block;
   max-width: 600px;
   width: 100%;
+  box-shadow: var(--box-shadow);
 }
 
 /*ABOUT ME*/
@@ -208,6 +212,7 @@
   color: var(--sub-text-color);
   margin-top: 90px;
   margin-bottom: 70px;
+  font-size: 13px;
 }
 
 .footer-code-link:hover {
@@ -241,6 +246,10 @@
   .navbar-brand {
     margin-left: 20px;
     font-size: 35px;
+  }
+
+  .logo-text {
+    margin-left: 20px;
   }
 
   .navbar-toggler {
@@ -283,7 +292,16 @@
   }
   .navbar-brand {
     font-size: 26px;
-    margin-left: 22px;
+    margin-left: 20px;
+  }
+
+  .logo-img {
+    width: 80px;
+  }
+
+  .logo-text {
+    margin-left: 20px;
+    font-size: 10px;
   }
 
   .navbar-toggler-icon {
