--- a/style-frontend.css
+++ b/style-frontend.css
@@ -38,7 +38,7 @@
   margin-left: auto;
   font-family: var(--sub-font);
   margin-right: 50px;
-  font-size: 18px;
+  font-size: 15px;
 }
 
 .nav-link {
@@ -155,6 +155,10 @@
     font-size: 35px;
   }
 
+  .logo-text {
+    margin-left: 20px;
+  }
+
   .navbar-toggler {
     margin-right: 10px;
   }
@@ -187,7 +191,16 @@
   }
   .navbar-brand {
     font-size: 26px;
-    margin-left: 0;
+    margin-left: 20px;
+  }
+
+  .logo-img {
+    width: 80px;
+  }
+
+  .logo-text {
+    margin-left: 20px;
+    font-size: 10px;
   }
 
   .navbar-toggler-icon {
@@ -202,5 +215,12 @@
   .hover-list {
     font-size: 20px;
     text-align: center;
+  }
+
+  .footer-code {
+    margin-left: 18px;
+    margin-right: 18px;
+    margin-top: 60px;
+    font-size: 12px;
   }
 }
