--- a/style.css
+++ b/style.css
@@ -106,6 +106,7 @@
 .image-title,
 .image-title-dict {
   font-family: var(--header-font);
+  font-size: 16px;
 }
 /*END PORTFOLIO PAGE*/
 
@@ -189,8 +190,8 @@
 
 .website-link {
   font-family: var(--sub-font);
-  font-size: 18px;
-  color: var(--sub-text-color);
+  font-size: 14px;
+  color: black;
   text-decoration: none;
   margin-left: 8px;
 }
@@ -269,7 +270,7 @@
   }
 
   .image-title {
-    font-size: 20px;
+    font-size: 16px;
   }
 }
 
