--- a/style-ux.css
+++ b/style-ux.css
@@ -1,6 +1,6 @@
 :root {
-  --header-font: "Noto Serif", serif;
-  --sub-font: "M PLUS 1p", sans-serif;
+  --header-font: "M PLUS 1p", sans-serif;
+  --sub-font: "Pontano Sans", sans-serif;
   --sub-text-color: #5d6775;
   --hover-text: #cedaea;
   --hover-bg: #5e656d;
@@ -15,6 +15,12 @@
 .navbar {
   padding: 50px;
 }
+
+.navbar-light .navbar-toggler {
+  border: none !important;
+  border-color: white !important;
+  width: 60px;
+}
 .navbar-brand {
   font-family: var(--header-font);
   font-size: 50px;
@@ -27,16 +33,9 @@
   margin-bottom: 5px;
 }
 
-.logo-text {
-  font-size: 12px;
-  font-family: var(--sub-font);
-  color: var(--sub-text-color);
-  margin-left: 50px;
-}
-
 .navbar-nav {
   margin-left: auto;
-  font-family: var(--sub-font);
+  font-family: var(--header-font);
   margin-right: 50px;
   font-size: 15px;
 }
@@ -326,7 +325,7 @@ p {
   font-family: var(--sub-font);
   color: var(--sub-text-color);
   margin-bottom: 70px;
-  font-size: 13px;
+  font-size: 10px;
 }
 
 .footer-code-link:hover {
@@ -336,30 +335,7 @@ p {
 
 /*MEDIA QUERIES*/
 
-@media (max-width: 820px) {
-  .about-section {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-  }
-
-  .about-paragraph,
-  .about-paragraph-two {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    border-left: none;
-    text-align: center;
-  }
-
-  a .resume-button {
-    display: inline-block;
-    margin: 0 auto;
-    text-align: center;
-  }
-}
-
-@media (max-width: 991px) {
+@media (min-width: 821px) and (max-width: 991px) {
   .navbar {
     padding: 30px;
   }
@@ -384,10 +360,6 @@ p {
     padding: 80px;
   }
 
-  .navbar-toggler-icon {
-    max-width: 32px;
-  }
-
   .image-title {
     font-size: 16px;
   }
@@ -398,6 +370,41 @@ p {
 
   .container {
     align-items: center;
+  }
+}
+
+@media (min-width: 768px) and (max-width: 820px) {
+  .navbar {
+    padding-left: 30px;
+    padding-right: 0;
+  }
+
+  .navbar-brand {
+    margin-left: 40px;
+  }
+
+  .navbar-toggler {
+    margin-right: 40px;
+  }
+  .about-section {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+  }
+
+  .about-paragraph,
+  .about-paragraph-two {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    border-left: none;
+    text-align: center;
+  }
+
+  a .resume-button {
+    display: inline-block;
+    margin: 0 auto;
+    text-align: center;
   }
 }
 
@@ -499,13 +506,18 @@ p {
   }
 }
 
-@media (max-width: 414px) {
+@media (min-width: 415px) and (max-width: 767px) {
   .navbar {
-    padding: 20px 0 20px 6px;
+    padding-left: 10px;
+    padding-right: 10px;
+    padding-top: 10px;
   }
   .navbar-brand {
-    font-size: 26px;
-    margin-left: 20px;
+    margin-left: 5px;
+  }
+
+  .navbar-toggler {
+    margin-right: 5px;
   }
 
   .logo-img {
@@ -593,5 +605,19 @@ p {
   .next-steps {
     margin-top: 40px;
     margin-bottom: 40px;
+  }
+}
+
+@media (max-width: 414px) {
+  .navbar {
+    padding: 12px 0 12px 0;
+  }
+  .navbar-brand {
+    font-size: 26px;
+    margin-left: 12px;
+  }
+
+  .navbar-toggler {
+    margin-right: 12px;
   }
 }
