--- a/style.css
+++ b/style.css
@@ -1,6 +1,8 @@
 :root {
   --header-font: "Noto Serif", serif;
   --sub-font: "M PLUS 1p", sans-serif;
+  --third-font: "Urbanist", sans-serif;
+  --fourth-font: "Pontano Sans", sans-serif;
   --sub-text-color: #5d6775;
   --hover-text: #cedaea;
   --hover-bg: #5e656d;
@@ -15,6 +17,12 @@
 .navbar {
   padding: 50px;
 }
+
+.navbar-light .navbar-toggler {
+  border: none !important;
+  border-color: white !important;
+  width: 60px;
+}
 .navbar-brand {
   font-family: var(--header-font);
   font-size: 50px;
@@ -25,13 +33,6 @@
 .logo-img {
   width: 100px;
   margin-bottom: 5px;
-}
-
-.logo-text {
-  font-size: 12px;
-  font-family: var(--sub-font);
-  color: var(--sub-text-color);
-  margin-left: 50px;
 }
 
 .navbar-nav {
@@ -57,7 +58,37 @@
 }
 
 .sr-only {
-  text-decoration: underline;
+  margin-bottom: 60px;
+  border-bottom: 1px solid currentColor;
+}
+
+/*LANDING Homepage*/
+.home-title {
+  font-family: var(--sub-font);
+  font-size: 120px;
+  margin-top: 100px;
+}
+
+.home-paragraph {
+  font-family: var(--fourth-font);
+  color: var(--sub-text-color);
+  margin-top: 40px;
+  margin-bottom: 60px;
+}
+
+.resume-button-home {
+  font-family: var(--sub-font);
+  color: black;
+  text-decoration: none;
+  padding: 10px 40px;
+  border: 1px solid black;
+}
+
+.resume-button-home:hover {
+  color: #ffffff;
+  background-color: var(--hover-bg);
+  border-color: var(--hover-bg);
+  transition: 600ms;
 }
 
 /*PORTFOLIO PAGE*/
@@ -105,7 +136,7 @@
 
 .image-title,
 .image-title-dict {
-  font-family: var(--header-font);
+  font-family: var(--sub-font);
   font-size: 16px;
 }
 /*END PORTFOLIO PAGE*/
@@ -146,14 +177,14 @@
   display: block;
 }
 .about-paragraph {
-  font-family: var(--sub-font);
-  font-size: 20px;
+  font-family: var(--fourth-font);
+  font-size: 16px;
   color: var(--sub-text-color);
   margin-left: 18px;
 }
 
 .about-paragraph-two {
-  font-family: var(--sub-font);
+  font-family: var(--fourth-font);
   margin-bottom: 80px;
   margin-left: 18px;
   border-left: 1px solid var(--hover-text);
@@ -164,7 +195,7 @@
 }
 
 .resume-button {
-  font-family: var(--header-font);
+  font-family: var(--sub-font);
   color: black;
   text-decoration: none;
   padding: 10px 40px;
@@ -209,11 +240,11 @@
 
 /*FOOTER CODE*/
 .footer-code {
-  font-family: var(--sub-font);
+  font-family: var(--fourth-font);
   color: var(--sub-text-color);
-  margin-top: 90px;
+  margin-top: 260px;
   margin-bottom: 70px;
-  font-size: 13px;
+  font-size: 10px;
 }
 
 .footer-code-link:hover {
@@ -223,24 +254,7 @@
 
 /*MEDIA QUERIES*/
 
-@media (max-width: 820px) {
-  .about-section {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-  }
-
-  .about-paragraph,
-  .about-paragraph-two {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    border-left: none;
-    text-align: center;
-  }
-}
-
-@media (max-width: 991px) {
+@media (min-width: 821px) and (max-width: 991px) {
   .navbar {
     padding: 30px;
   }
@@ -265,57 +279,156 @@
     padding: 80px;
   }
 
-  .navbar-toggler-icon {
-    max-width: 32px;
+  .home-title {
+    font-size: 90px;
   }
 
-  .image-title {
-    font-size: 16px;
+  .home-paragraph {
+    margin-top: 36px;
+  }
+
+  .about-section {
+    text-align: center;
+  }
+
+  .email-linkedin-link {
+    align-items: left;
   }
 }
 
-@media (max-width: 767px) {
+@media (min-width: 768px) and (max-width: 820px) {
+  .navbar {
+    padding-left: 30px;
+    padding-right: 0;
+  }
+
+  .navbar-brand {
+    margin-left: 40px;
+  }
+
+  .navbar-toggler {
+    margin-right: 40px;
+  }
+
+  .home-title {
+    margin-top: 60px;
+    font-size: 80px;
+  }
+
+  .home-paragraph {
+    margin-top: 24px;
+    font-size: 15px;
+  }
+
+  .about-section {
+    display: flex;
+    flex-direction: column;
+    text-align: center;
+    align-items: center;
+  }
+
+  .about-paragraph,
+  .about-paragraph-two {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    border-left: none;
+    font-size: 16px;
+  }
+
+  .about-title {
+    font-size: 30px;
+  }
+}
+
+@media (min-width: 415px) and (max-width: 767px) {
+  .navbar {
+    padding-left: 10px;
+    padding-right: 10px;
+    padding-top: 10px;
+  }
+  .navbar-brand {
+    margin-left: 5px;
+  }
+
+  .navbar-toggler {
+    margin-right: 5px;
+  }
+
+  .home-title {
+    margin-top: 50px;
+    font-size: 70px;
+  }
+
+  .home-paragraph {
+    margin-top: 20px;
+    font-size: 12px;
+  }
   .bio-pic {
     display: block !important;
     margin: 0 auto !important;
     text-align: center !important;
   }
 
+  .about-section {
+    align-items: center;
+    text-align: center;
+  }
+
   .about-title {
+    font-size: 30px;
     text-align: center !important;
     margin-top: 30px !important;
+  }
+
+  .about-paragraph,
+  .about-paragraph-two {
+    font-size: 16px;
   }
 }
 
 @media (max-width: 414px) {
   .navbar {
-    padding: 20px 0 20px 6px;
+    padding: 12px 0 12px 0;
   }
   .navbar-brand {
     font-size: 26px;
-    margin-left: 20px;
+    margin-left: 12px;
+  }
+
+  .navbar-toggler {
+    margin-right: 12px;
   }
 
   .logo-img {
     width: 80px;
   }
 
-  .logo-text {
-    margin-left: 20px;
-    font-size: 10px;
+  .home-title {
+    margin-top: 40px;
+    font-size: 50px;
   }
 
-  .navbar-toggler-icon {
-    max-width: 30px;
+  .home-paragraph {
+    margin-top: 16px;
+    font-size: 11px;
   }
 
+  .about-section {
+    align-items: center;
+    text-align: center;
+  }
   .about-title {
-    font-size: 28px;
+    font-size: 26px;
   }
 
   .about-section,
   .about-paragraph {
     font-size: 15px;
+  }
+
+  .about-paragraph-two {
+    border-left: none;
   }
 
   .footer-code {
@@ -326,7 +439,8 @@
   }
 
   .all-buttons {
+    margin-top: 0;
     display: block;
-    text-align: left;
+    text-align: center;
   }
 }
