--- a/style-frontend.css
+++ b/style-frontend.css
@@ -38,6 +38,7 @@
   font-family: var(--header-font);
   margin-right: 50px;
   font-size: 15px;
+  align-items: center;
 }
 
 .nav-link {
@@ -278,9 +279,13 @@
   .logo-img {
     width: 80px;
   }
+  .hover-list {
+    margin-top: 1px !important;
+  }
   .hover-list-title {
-    font-size: 20px;
-    margin-top: 30px;
+    font-size: 18px;
+    margin-top: 5px;
+    margin-bottom: 14px !important;
   }
 
   .image-overlay,
