--- a/style.css
+++ b/style.css
@@ -100,52 +100,33 @@
 }
 
 /*PORTFOLIO PAGE*/
-.image {
-  margin: 0 auto;
-  margin-bottom: 20px;
-  position: relative;
-  max-width: 500px;
-  border-color: var(--sub-text-color);
-}
-
-.portfolio-img {
-  display: block;
+.projects-img1-test {
   width: 100%;
-  box-shadow: var(--box-shadow);
 }
 
-.image-overlay,
-.image-overlay-dict {
-  position: absolute;
-  top: 0;
-  left: 0;
-  width: 100%;
-  height: 100%;
-  background: rgba(94, 101, 109, 0.9);
-  color: white;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  opacity: 0;
-  transition: opacity 0.25s;
+.projects-card-text {
+  text-decoration: none;
+  color: black;
+}
+
+.projects-card:hover {
+  box-shadow: rgba(50, 50, 93, 0.25) 0px 13px 27px -5px,
+    rgba(0, 0, 0, 0.3) 0px 8px 16px -8px !important;
+  color: black;
+  top: -6px;
+  transition: box-shadow 0.5s !important;
+}
+.card-title {
   font-family: var(--sub-font);
-  font-size: 26px;
+  font-size: 18px;
 }
-
-.image-overlay:hover,
-.image-overlay-dict:hover {
-  opacity: 1;
+.card-body {
+  background-color: #e5e5e5;
 }
-
-.image-title,
-.image-title-dict {
-  font-family: var(--sub-font);
-  font-size: 16px;
+.card-text {
+  color: var(--sub-text-color);
+  font-family: var(--fourth-font);
+  font-size: 15px;
 }
 /*END PORTFOLIO PAGE*/
 
