--- a/style-frontend.css
+++ b/style-frontend.css
@@ -7,7 +7,7 @@
   --hover-bg: #5e656d;
   --project-bg: #ebf0f6;
   --darker-text-color: #2f3a47;
-  --header-bg-color: #e5e5e5;
+  --header-bg-color: #f2f2f2;
   --box-shadow: 0 1px 1px hsl(0deg 0% 0% / 0.075),
     0 2px 2px hsl(0deg 0% 0% / 0.075), 0 4px 4px hsl(0deg 0% 0% / 0.075),
     0 8px 8px hsl(0deg 0% 0% / 0.075), 0 16px 16px hsl(0deg 0% 0% / 0.075);
@@ -84,6 +84,26 @@
   transition: 600ms;
 }
 
+.dictionary-button-two {
+  font-family: var(--header-font);
+  font-size: 13px;
+  color: black;
+  text-decoration: none;
+  padding: 10px 20px;
+  margin-bottom: 20px;
+  width: 150px;
+  border: 1px solid black;
+  background-color: white;
+  box-shadow: var(--subtle-box-shadow) !important;
+}
+
+.dictionary-button-two:hover {
+  color: #ffffff;
+  background-color: var(--hover-bg);
+  border-color: var(--hover-bg);
+  transition: 600ms;
+}
+
 .dictionary-title {
   font-family: var(--header-font);
   margin-bottom: 22px;
@@ -114,23 +134,53 @@
   border: 0.5 solid var(--sub-text-color) !important;
 }
 
+.dictionary-details-all {
+  border: 1px solid var(--header-bg-color);
+}
 .dictionary-project-details {
-  font-family: var(--italic-font);
-  font-size: 2em;
+  font-family: var(--header-font);
+  font-size: 28px;
 }
 
 .dictionary-list {
   font-family: var(--header-font);
-  padding-left: 150px;
-  padding-right: 105px;
-  line-height: 28px;
+  font-size: 14px;
+  padding-left: 120px;
+  padding-right: 120px;
+  line-height: 26px;
+}
+/*FOOTER*/
+.footer-link {
+  font-family: var(--header-font);
+  padding: 24px;
+}
+
+.footer-link a {
+  color: var(--sub-text-color);
+  text-decoration: none;
+}
+
+.footer-link a:hover {
+  color: white !important;
+  background-color: rgba(94, 101, 109, 0.6) !important;
+  transition: 600ms !important;
+  padding: 10px 16px;
+}
+
+.footer-link .active {
+  margin-bottom: 60px;
+  border-bottom: 1px solid currentColor;
+}
+
+.footer-all {
+  margin-top: 150px;
+  margin-bottom: 70px;
 }
 
 /*FOOTER CODE*/
 .footer-code {
   font-family: var(--sub-font);
   color: var(--sub-text-color);
-  margin-top: 150px;
   margin-bottom: 70px;
   font-size: 10px;
 }
@@ -141,7 +191,14 @@
 }
 
 /*MEDIA QUERIES*/
-/*MEDIA QUERIES*/
+@media (min-width: 992px) and (max-width: 1199px) {
+  .dictionary-list {
+    font-size: 14px;
+    padding-left: 40px;
+    padding-right: 40px;
+    line-height: 26px;
+  }
+}
 @media (min-width: 821px) and (max-width: 991px) {
   .navbar {
     padding: 30px;
@@ -182,6 +239,10 @@
     margin-bottom: 5px;
     text-decoration: underline;
   }
+
+  .footer-all {
+    margin-top: 80px;
+  }
 }
 
 @media (min-width: 768px) and (max-width: 820px) {
@@ -219,6 +280,12 @@
   .title-line {
     margin-bottom: 5px;
     text-decoration: underline;
+  }
+  .footer-all {
+    margin-top: 80px;
+  }
+  .footer-link {
+    margin-bottom: 80px;
   }
 }
 
@@ -259,6 +326,49 @@
     font-size: 13px;
     margin-bottom: 5px;
     text-decoration: underline;
+  }
+
+  .frontend-header {
+    align-items: center !important;
+    text-align: center !important;
+    padding-bottom: 18px;
+  }
+
+  .dictionary-title {
+    font-size: 24px;
+  }
+
+  .dictionary-button-two {
+    display: block;
+    margin: 0 auto;
+    text-align: center;
+    padding: 10px 20px;
+    font-size: 14px;
+    width: 160px;
+    box-shadow: var(--subtle-box-shadow) !important;
+  }
+
+  .dictionary-tools,
+  .dictionary-summary {
+    font-size: 14px;
+  }
+
+  .dictionary-project-details {
+    font-size: 20px;
+  }
+
+  .dictionary-list {
+    padding-left: 30px;
+    padding-right: 30px;
+    line-height: 26px;
+  }
+
+  .footer-all {
+    margin-top: 50px;
+  }
+
+  .footer-link {
+    padding-bottom: 80px !important;
   }
 }
 
@@ -307,5 +417,40 @@
   .title-line {
     margin-bottom: 5px;
     text-decoration: underline;
+  }
+
+  .frontend-header {
+    text-align: center;
+    padding-bottom: 12px;
+  }
+
+  .dictionary-title {
+    font-size: 21px;
+  }
+
+  .dictionary-tools,
+  .dictionary-summary {
+    font-size: 14px;
+  }
+
+  .dictionary-button-two {
+    display: block;
+    margin: 0 auto;
+    margin-bottom: 20px;
+    box-shadow: var(--subtle-box-shadow) !important;
+  }
+
+  .dictionary-project-details {
+    font-size: 18px;
+  }
+
+  .dictionary-list {
+    padding-left: 30px;
+    padding-right: 30px;
+    line-height: 26px;
+  }
+
+  .footer-all {
+    margin-top: 50px;
   }
 }
