--- a/style-ux.css
+++ b/style-ux.css
@@ -429,104 +429,6 @@ p {
   }
 }
 
-@media (max-width: 767px) {
-  .bio-pic {
-    display: block !important;
-    margin: 0 auto !important;
-    text-align: center !important;
-  }
-
-  .about-title {
-    text-align: center !important;
-    margin-top: 30px !important;
-  }
-
-  .title-text {
-    margin-top: 25px;
-    margin-bottom: 10px;
-    text-align: left !important;
-  }
-
-  .title-img {
-    margin-top: 20px;
-  }
-
-  .case-study {
-    margin-bottom: 10px;
-  }
-
-  .project-overview-section,
-  .understand-user-section,
-  .persona-section,
-  .user-journey-map-section,
-  .paper-wireframe-section,
-  .digital-wireframe-section,
-  .refining-the-desgin,
-  .end-section {
-    padding-left: 0;
-    padding-right: 0;
-    padding-top: 10px;
-    font-size: 13px;
-  }
-
-  .project-overview-section h4,
-  .pain-points h4,
-  .paper-wireframe-section h3,
-  .digital-wireframe-section h3,
-  .round-findings h4,
-  .refining-the-desgin h3,
-  .mockups h3,
-  .accessibility-section h5,
-  .end-section h4 {
-    font-size: 17px;
-  }
-
-  .project-overview-title,
-  .understand-user-title,
-  .pain-points h2,
-  .persona-section h2,
-  .user-journey-map-section h2,
-  .paper-wireframe-section h2,
-  .refining-the-desgin h2,
-  .accessibility-section h3,
-  .refined-designs-section h3,
-  .hifi-prototype h3,
-  .end-section h2,
-  .end-section h3 {
-    font-size: 19px;
-  }
-
-  .understand-user-section {
-    padding-left: 10px;
-    padding-right: 10px;
-    padding-top: 10px;
-  }
-
-  .pain-point-individual {
-    padding-left: 0;
-    padding-right: 0;
-    border: none;
-    background-color: var(--project-bg);
-  }
-
-  .usability-study-findings {
-    padding-left: 20px;
-    padding-right: 20px;
-  }
-
-  .usability-study-title {
-    font-size: 17px;
-  }
-
-  .usability-study-findings p,
-  .findings,
-  .mockups p,
-  .accessibility-section p,
-  .hifi-prototype p {
-    font-size: 13px;
-  }
-}
-
 @media (min-width: 415px) and (max-width: 767px) {
   .navbar {
     padding-left: 10px;
@@ -554,11 +456,19 @@ p {
     max-width: 30px;
   }
 
+  .container {
+    text-align: center !important;
+  }
+
   .title-text {
     margin-top: 20px;
   }
   .case-title {
     font-size: 20px;
+  }
+
+  .petconnect-title {
+    font-size: 38px !important;
   }
   .case-study,
   .case-desc {
@@ -593,14 +503,11 @@ p {
     font-size: 12px;
   }
 
-  .project-overview-section,
-  .understand-user-section,
   .persona-section,
   .user-journey-map-section,
   .paper-wireframe-section,
   .digital-wireframe-section,
   .usability-study-findings,
-  .refining-the-desgin,
   .mockups,
   .accessibility-section,
   .refined-designs-section,
@@ -611,6 +518,124 @@ p {
     padding-top: 22px;
     padding-bottom: 22px;
     margin-bottom: 40px;
+  }
+
+  .project-overview-section {
+    padding-bottom: 2px;
+  }
+
+  .understand-user-section {
+    padding-bottom: 2px;
+  }
+
+  .bio-pic {
+    display: block !important;
+    margin: 0 auto !important;
+    text-align: center !important;
+  }
+
+  .about-title {
+    text-align: center !important;
+    margin-top: 30px !important;
+  }
+
+  .title-text {
+    margin-top: 25px;
+    margin-bottom: 10px;
+    text-align: left !important;
+  }
+
+  .title-img {
+    margin-top: 20px;
+  }
+
+  .case-study {
+    margin-bottom: 10px;
+  }
+
+  .project-overview-section,
+  .understand-user-section,
+  .persona-section,
+  .user-journey-map-section,
+  .digital-wireframe-section,
+  .refining-the-desgin,
+  .end-section {
+    padding-left: 0;
+    padding-right: 0;
+    padding-top: 20px;
+    font-size: 13px;
+  }
+
+  .project-overview-section h4,
+  .pain-points h4,
+  .paper-wireframe-section h3,
+  .digital-wireframe-section h3,
+  .round-findings h4,
+  .refining-the-desgin h3,
+  .mockups h3,
+  .accessibility-section h5,
+  .end-section h4 {
+    font-size: 19px;
+  }
+
+  .project-overview-title,
+  .pain-points h2,
+  .persona-section h2,
+  .user-journey-map-section h2,
+  .accessibility-section h3,
+  .refined-designs-section h3,
+  .hifi-prototype h3 {
+    font-size: 19px;
+  }
+
+  .project-overview-title {
+    margin-bottom: 14px;
+  }
+
+  .text-italic {
+    font-size: 30px;
+  }
+
+  .understand-user-section {
+    padding-left: 10px;
+    padding-right: 10px;
+    padding-top: 10px;
+    text-align: center;
+  }
+
+  .pain-point-title {
+    margin-bottom: 0 !important;
+  }
+
+  .pain-point-paragraph {
+    margin-bottom: 2px !important;
+    padding-bottom: 2px !important;
+  }
+
+  .pain-point-individual {
+    padding-left: 0;
+    padding-right: 0;
+
+    border: none;
+    background-color: var(--project-bg);
+  }
+
+  .usability-study-findings {
+    padding-left: 20px;
+    padding-right: 20px;
+  }
+
+  .usability-study-title {
+    font-size: 17px;
+    margin-bottom: 10px;
+  }
+
+  .usability-study-findings p,
+  .findings,
+  .mockups p,
+  .accessibility-section p,
+  .hifi-prototype p {
+    font-size: 13px;
   }
 
   .round-findings {
@@ -634,6 +659,12 @@ p {
   .next-steps {
     margin-top: 40px;
     margin-bottom: 40px;
+    padding-left: 18px;
+    padding-right: 18px;
+  }
+
+  .pet-next-steps {
+    font-size: 15px !important;
   }
 }
 
@@ -648,6 +679,14 @@ p {
 
   .navbar-toggler {
     margin-right: 12px;
+  }
+
+  .container {
+    text-align: center !important;
+  }
+
+  .petconnect-title {
+    font-size: 50px !important;
   }
 
   .footer-code {
